# djapp

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
src/: .env.sample  manage.py
src/common/: exception_handlers.py  exceptions.py  models.py  paginations.py  permissions.py  services.py  tasks.py  utils.py  validators.py  views.py
src/common/migrations/: 0001_initial.py
src/config/: celery.py  celeryconfig.py  gunicornconfig.py  urls.py
src/config/locale/fa/LC_MESSAGES/: django.po
src/config/settings/: base.py  local.py  production.py
src/mainapp/: admin.py  apps.py  di.py  exceptions.py  filters.py  permissions.py  urls.py
src/mainapp/fixtures/: customers.json
src/mainapp/management/commands/: createpermissions.py
src/mainapp/migrations/: 0001_initial.py
src/mainapp/models/: customer.py
src/mainapp/serializers/: customers.py  token.py
src/mainapp/services/: customer.py
src/mainapp/tests/: test_token_api.py
src/mainapp/views/: customers.py  token.py
